# asmlib

./: CMakeLists.txt  install.sh
doc/: asm.s
src/: asm_add.asm  asm_append_str.asm  asm_assert.asm  asm_cd.asm  asm_cin.asm  asm_clear_str.asm  asm_div.asm  asm_errno.asm  asm_errno_str.asm  asm_execve.asm  asm_exit.asm  asm_find.asm  asm_find_str_end.asm  asm_free.asm  asm_get_cwd.asm  asm_macros.inc  asm_malloc.asm  asm_math.asm  asm_mkdir.asm  asm_mul.asm  asm_open_file.asm  asm_print_char.asm  asm_print_int.asm  asm_print_str.asm  asm_printf.asm  asm_read.asm  asm_rm_dir.asm  asm_rm_file.asm  asm_strcmp.asm  asm_strcpy.asm  asm_string.h  asm_string_struct.asm  asm_strlen.asm  asm_sub.asm  asm_substr.asm  asm_touch.asm  asm_uid.asm  asm_write.asm  lib.c  lib.h  (+7 more)
